# CyclingCoach

./: .gitignore  README.md  pyproject.toml  training_plan.md  zones.yaml
config/: .env  .env.backup  env.template
cycling_venv/: pyvenv.cfg
data/: activities.csv
data/detailed/: 14518882026.json  14518882026_analysis.json  14553029679.json  14553029679_analysis.json  14588709889.json  14588709889_analysis.json  14632471501.json  14632471501_analysis.json  14643924607.json  14643924607_analysis.json  14663970537.json  14663970537_analysis.json  14681556009.json  14681556009_analysis.json  14692592155.json  14692592155_analysis.json  14712780298.json  14712780298_analysis.json  14732787905.json  14732787905_analysis.json
data/figures/: ride_hr_zones.html  ride_training_load.html  weekly_ride_distance.html
data/figures/detailed/14518882026/: map_altitude.html  map_velocity_smooth.html
data/figures/detailed/14553029679/: dashboard.html  map_altitude.html  map_velocity_smooth.html
data/figures/detailed/14588709889/: map_altitude.html  map_velocity_smooth.html
data/figures/detailed/14632471501/: dashboard.html  map_altitude.html  map_velocity_smooth.html
data/figures/detailed/14643924607/: dashboard.html  map_altitude.html  map_velocity_smooth.html
data/figures/detailed/14663970537/: map_altitude.html  map_velocity_smooth.html
data/streams/: 14518882026.csv  14518882026.json  14553029679.csv  14553029679.json  14588709889.csv  14588709889.json  14632471501.csv  14632471501.json  14643924607.csv  14643924607.json  14663970537.csv  14663970537.json  14681556009.csv  14681556009.json  14692592155.csv  14692592155.json  14712780298.csv  14712780298.json  14732787905.csv  14732787905.json
src/: __init__.py  analyzer.py  check_credentials.py  cli.py  create_test_activity.py  detailed_activity.py  main.py  openai_integration.py  strava_api.py  strava_auth.py  test_openai_integration.py  test_visualizations.py
(+12 files in other folders)
